Test tf init+plan

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,9 +9,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      # Terraform version to use
+      TERRAFORM_VERSION: 0.14.5
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Run a one-line script
-        run: echo Hello from Octo Organization
+    - uses: actions/checkout@v2
+    - uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: ${{ env.TERRAFORM_VERSION }}
+    - run: terraform init -input=false
+    - run: terraform plan -input=false
+      id: plan
+    - name: Display info
+      run: |
+        echo ${{ steps.plan.outputs.stdout }}
+        echo ${{ steps.plan.outputs.stderr }}
+        echo ${{ steps.plan.outputs.exitcode }}
