--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,6 @@ jobs:
       id: plan
     - name: Display info
       run: |
-        echo ${{ steps.plan.outputs.stdout }}
-        echo ${{ steps.plan.outputs.stderr }}
-        echo ${{ steps.plan.outputs.exitcode }}
+        echo "${{ steps.plan.outputs.stdout }}"
+        echo "${{ steps.plan.outputs.stderr }}"
+        echo "${{ steps.plan.outputs.exitcode }}"
