--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,12 +19,12 @@ jobs:
     - run: terraform init -input=false
     - run: terraform plan -input=false -out=terraform.plan
       id: plan
-    - run: find . -ls
+    - run: tar cfz ALL.tgz .
     - name: Upload Plan Artifact
       uses: actions/upload-artifact@v1
       with:
         name: ALL
-        path: ./
+        path: ALL.tgz
 
     - name: Display info
       run: |
@@ -43,6 +43,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: ALL
+    - run: tar xfz ALL.tgz
     - run: find . -ls
     - uses: hashicorp/setup-terraform@v1
       with:
