--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
     - run: terraform init -input=false
     - run: terraform plan -input=false -out=terraform.plan
       id: plan
-    - run: tar cfz ALL.tgz .
+    - run: tar cfz ALL.tgz . || true
     - name: Upload Plan Artifact
       uses: actions/upload-artifact@v1
       with:
