--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,6 +19,7 @@ jobs:
     - run: terraform init -input=false
     - run: terraform plan -input=false -out=terraform.plan
       id: plan
+    - run: df
     - run: tar cfz ALL.tgz . || true
     - name: Upload Plan Artifact
       uses: actions/upload-artifact@v1
