--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,7 +44,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: ALL
-    - run: tar xfz ${{ env.ARTIFACT_TAR }}
+    - run: tar xfz ${{ ./env.ARTIFACT_TAR }}
     - uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: ${{ env.TERRAFORM_VERSION }}
